force-app/main/default/objects/Dashboard_Field_Configuration__mdt/Dashboard_Field_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>This is to store information on what all fields will be deisplayed on Audit Dashboard.</description>
    <label>Dashboard Field Configuration</label>
    <pluralLabel>DashboardFieldConfigurations</pluralLabel>
</CustomObject>