force-app/main/default/objects/Dashboard_Field_Configuration__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>144</length>
    <required>true</required>
    <type>Text</type>
</CustomField>