force-app/main/default/objects/Dashboard_Field_Configuration__mdt/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <label>Field Label</label>
    <length>144</length>
    <required>true</required>
    <type>Text</type>
</CustomField>