force-app/main/default/objects/Dashboard_Field_Configuration__mdt/fields/Order_Of_Column__c.field-meta.xml
<CustomField>
    <fullName>Order_Of_Column__c</fullName>
    <description>Order of the Column on Reciept Dashboard.</description>
    <label>Order Of Column</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>