force-app/main/default/objects/Dashboard_Field_Configuration__mdt/fields/Screen__c.field-meta.xml
<CustomField>
    <fullName>Screen__c</fullName>
    <label>Screen</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit</fullName>
                <default>true</default>
                <label>Audit</label>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>